# ChangeLog for dev-java/jna
# Copyright 1999-2011 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/dev-java/jna/ChangeLog,v 1.10 2011/12/25 14:23:57 fordfrog Exp $

*jna-3.4.0 (25 Dec 2011)

  25 Dec 2011; Miroslav Šulc <fordfrog@gentoo.org>
  +files/3.4.0-build.xml.patch, +jna-3.4.0.ebuild,
  +files/3.4.0-makefile-flags.patch, metadata.xml:
  Version bump. Added new USE flags, awt and nio-buffers. awt USE flag should
  require X USE flag on used JDK/JRE but we do not have this flag on virtuals
  yet.

*jna-3.3.0 (13 Dec 2011)

  13 Dec 2011; Miroslav Šulc <fordfrog@gentoo.org>
  +files/3.3.0-build.xml.patch, +files/3.3.0-makefile-flags.patch,
  +jna-3.3.0.ebuild:
  Version bump

  18 Jul 2011; Kacper Kowalik <xarthisius@gentoo.org> jna-3.2.4.ebuild:
  ppc stable wrt #311105

*jna-3.2.7 (25 Jan 2011)

  25 Jan 2011; Miroslav Šulc <fordfrog@gentoo.org>
  +files/3.2.7-build.xml.patch, +files/3.2.7-makefile-flags.patch,
  +jna-3.2.7.ebuild:
  Version bump. Switched to EAPI4, sources are now downloaded directly from
  upstream, build.xml patches moved to patch file, also added building of
  platform.jar.

  23 May 2010; Pacho Ramos <pacho@gentoo.org> jna-3.2.4.ebuild:
  stable amd64, bug 311105

  24 Mar 2010; Christian Faulhammer <fauli@gentoo.org> jna-3.2.4.ebuild:
  stable x86, bug 311105

*jna-3.2.4 (30 Dec 2009)

  30 Dec 2009; Alistair Bush <ali_bush@gentoo.org>
  +files/3.2.4-makefile-flags.patch, +jna-3.2.4.ebuild:
  Version Bump.

  25 Oct 2009; Mounir Lamouri <volkmar@gentoo.org> jna-3.0.3-r1.ebuild:
  Keywording for ppc, bug 270910

*jna-3.0.3-r1 (03 Jun 2009)

  03 Jun 2009; Vlastimil Babka <caster@gentoo.org> +jna-3.0.3-r1.ebuild,
  +files/makefile-flags.patch:
  Revbump to switch to virtual/libffi, bug #272054.

*jna-3.0.3 (22 May 2009)

  22 May 2009; Vlastimil Babka <caster@gentoo.org> +jna-3.0.3.ebuild,
  +metadata.xml:
  New package, jruby dependency, bug #244785. Ebuild provided by serkan and