@@ -1,3 +1,6 @@
+-----BEGIN PGP SIGNED MESSAGE-----
+Hash: SHA1
+
 AUX 3.2.4-makefile-flags.patch 2151 RMD160 430a2e47e7a67283ac7c06c5b9496007d5c5d180 SHA1 278adedeec60b4a78f80f61e1f419eb086211534 SHA256 ba5701ddb20474dec27d39b0d0509f36edda4f6edcc3899e6426726b8d4e2377
 AUX 3.2.7-build.xml.patch 1180 RMD160 cb1f424f57b5889d2b8f10c6323539ceba1c67f1 SHA1 5ab392163bc0aba15a28c9e04c6422bb3198d7a9 SHA256 4b56d9bcc80d032dde9f66458e0cade95e5f961d04cc8b7efa49ebb714b393dd
 AUX 3.2.7-makefile-flags.patch 2046 RMD160 1699d60b8ab5848d298c49035cfbfcb88fb7ada0 SHA1 cb820a4cf865d254c6e4fedb7df4d5679a29b620 SHA256 87486291112b6cf4c344b1d7701f6990a2e7cfd76eb1120bfcbe429a9edb634c
@@ -17,10 +20,21 @@ DIST jna-3.3.0-platform-build.xml 3902 RMD160 445121b9ad42be2f6372199f600478a0ab
 DIST jna-3.3.0-platform-project.properties 1827 RMD160 ebe94fc4d3da81b56b5a4eefa971ede649176b0b SHA1 26c0333be130f69e1ae3757fe18ee9cdfa8613fa SHA256 3bd336986d201e403449fcf45edb40ce0fcca24935bd941e9784f6e88ca884c7
 DIST jna-3.3.0-src.zip 3601757 RMD160 d74011365c66a845225e32c1aa036e24e2e5537a SHA1 6c7ea3ed093670a70fe3523a5dd3f9c6d26c1c0e SHA256 636fe580521ecd812eadfca68311e5563551486ddac8db2d98deebcd57a1e7db
 DIST jna-3.4.0-src.tar.gz 34547165 RMD160 789f7198fb70fae6aaea87bedec087017cc6e296 SHA1 60ae10b3831e7ea628c0eda111f9165cbce5a805 SHA256 bff8fb935044a1e5de611e576e30a08c263e6a26a9f4c631dbe3a0cac2d79f14
-EBUILD jna-3.0.3-r1.ebuild 1637 RMD160 352e8ebf2a33889f476cef5ca35f0734cf3a73d5 SHA1 1f7796a3b1e4171eaffdc886b5492adedc05bfed SHA256 8d29b3bfc442e9ef92fa4bdba2fe39daa0456d2d1f04fdb4ceb452e8a925f591
-EBUILD jna-3.2.4.ebuild 1918 RMD160 835a2bfbc3c9486e3d51926150db1e693e536660 SHA1 6c9996eb2cc4cd29a8d7a3fe16dc94755a5b20d9 SHA256 36dafd4bdcef8bf2a74fe32330e48fdc96f8e7ff4a72e7bfeff43f5fc61717c3
-EBUILD jna-3.2.7.ebuild 2557 RMD160 4069f95db790abe471d45ee48b8b03ca9b724f71 SHA1 04e45c4a3a2370e9f5cfd16b638a128ad8c33ca4 SHA256 e509a5d04b13e53b0b09cc54185075bf4991687ba96867b13546fea2a6d781d9
-EBUILD jna-3.3.0.ebuild 2564 RMD160 1a2fd566a41f94899bea52763736a688a7bd3e3f SHA1 b53f83fb985f9d106a6a59e4b486ebead6bbb667 SHA256 ec85fe828c4375e93e6ccaf224889f8985680c736cd1c1088ddaf4891d23b787
-EBUILD jna-3.4.0.ebuild 2046 RMD160 712abd1bf58611c64596c76f1652277b9d4fc359 SHA1 82c93ba2e539befc4bed0c68067ffcb10394d3ba SHA256 251f4b79d18662b4d1b3bbca7726e63f06273b2f12b14a4b2537310debcab689
-MISC ChangeLog 2005 RMD160 7c90e58d858d4e477f295d9248c9c16df59dbb25 SHA1 3a27a08efc2ff13ce3b3043c163f4f71af423c8b SHA256 5c300d9195e503a0562008859e3cce746909942692c0828d7bba2ab0486c30c3
+EBUILD jna-3.0.3-r1.ebuild 1654 RMD160 aa389e088321b3ca1a0c5da061b89ab3d23cbe66 SHA1 770955b222fe3faf331648d4eaf85c6845aaa571 SHA256 b9394d71045280e8e72465f316f708b2653bc3bc4d400ca33404d2eb09463802
+EBUILD jna-3.2.4.ebuild 1932 RMD160 dd4e3a811c157a3dd1ae2715b56002d76c2c3ef3 SHA1 ec04bf19956e98202b400088927c4f74c23cedb5 SHA256 1272efe3fc3c15fee490f062de173737cef7dc5858e66d93880bc86358a6e07d
+EBUILD jna-3.2.7.ebuild 2573 RMD160 4977dcd8112181b0e9b16b6df3a7de65bf09490f SHA1 44c5470dc925230cbac8b1c7a6ee3dae641b8408 SHA256 7217da3c285406209e6fb719f6139aa00ccb1bcab748a2fce82ef42c0eb89104
+EBUILD jna-3.3.0.ebuild 2580 RMD160 e745286209047192bec77b8ac8890d59327ade5a SHA1 11a6181ef3a256ffa96f7ad86d56be889a54c77b SHA256 7f3eb87b6ee0356f8c2c59f3f5585482da8ec5135d17e17e168de366bb4762ef
+EBUILD jna-3.4.0.ebuild 2089 RMD160 40d200635144cf765ddc12a8e940661baa4f895b SHA1 223abd6b749f2f92da9093ad07666fd5f70b7c54 SHA256 14c80ed790002b66f9cd85f93cd413720a84a5f2eb4f6208d97f55d2bff3b22a
+MISC ChangeLog 2199 RMD160 b118d472187f198bd33e4a8b1a98722727b0a069 SHA1 b784b4cc45d0342001a8883be9a1fd5a7f1ee82c SHA256 14e5085a187ef8a50cb6774ff6348cbcf86410f795cf9c6c69ccb3779a9e9757
 MISC metadata.xml 295 RMD160 d7fc5e14f5b91d3271a001c1219c101b385253e0 SHA1 1882aa6897108b0bcb4ef1810ee6bf0c7ca42054 SHA256 7aeccd89219646978f39ce1d46b40051eb950e1452bd225e7dd8e2fe5267c8a2
+-----BEGIN PGP SIGNATURE-----
+Version: GnuPG v2.0.17 (GNU/Linux)
+
+iQEcBAEBAgAGBQJPayjgAAoJEIUJ+svaV163fFYH/R71DO6zxmcOr7rCISnMKcUg
+zHtkgZMfz6BDYsSSmHaoobzcFvdPD//UAxUiemBPuNxOO3XosJh8EvwlRDXtfwN8
+fMc1ZAvCzLOr/n262JbfkAsZILqVx28gKrX1Vf/J5ubi6wm4ZGvzTqNnBmFBsecd
+t/RyOBkvhwWhKkg4pizSfjQRjXhy9yY2nJx9SV2WuEHsQXK5yMGwpv7BNh50Nafl
+BoJGPgDd1fxYrWORyrw/dYJGmokUfDpC/JEI7iWlBKS9ohmu2sclv5s2rP1Y2vBr
+wsMCczZnGn/3K7Pg4xlnLXKK5YOtqPuQaALk5GJUAk+E1SdFrqKyszSYJW5+qXM=
+=r6h7
+-----END PGP SIGNATURE-----
