@@ -1,6 +1,10 @@
 # ChangeLog for dev-java/jna
-# Copyright 1999-2011 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/dev-java/jna/ChangeLog,v 1.10 2011/12/25 14:23:57 fordfrog Exp $
+# Copyright 1999-2012 Gentoo Foundation; Distributed under the GPL v2
+# $Header: /var/cvsroot/gentoo-x86/dev-java/jna/ChangeLog,v 1.11 2012/03/22 13:27:46 sera Exp $
+
+  22 Mar 2012; Ralph Sennhauser <sera@gentoo.org> jna-3.0.3-r1.ebuild,
+  jna-3.2.4.ebuild, jna-3.2.7.ebuild, jna-3.3.0.ebuild, jna-3.4.0.ebuild:
+  Add missing build dep dev-util/pkgconfig. #403577
 
 *jna-3.4.0 (25 Dec 2011)
 
